@@ -4,6 +4,8 @@ Change history
 Release Candidate 1
 ===================
 
+- AR Support: Added support to deal with ICollection<T> containers
+
 - Applied Marc-Andre's patch fixing MR-133
   "TestSupport not working under Mono"
 
